# stretchplayer

./: .gitattributes  .gitignore  BUGS.txt  CMakeLists.txt  COPYING  ChangeLog  INSTALL.txt  README.txt  config.h.in  stretchplayer.desktop.in  stretchplayer.pro
Documentation/: position-math-model.py  position-math.txt
art/: CMakeLists.txt
cmake/: FindJACK.cmake  FindLibMpg123.cmake  FindLibSndfile.cmake  FindRubberBand.cmake  TritiumFindPackageHandleStandardArgs.cmake  TritiumPackageHelper.cmake
debian/: .gitignore  changelog  control  docs  rules
src/: .gitignore  AlsaAudioSystem.cpp  AlsaAudioSystem.hpp  AlsaAudioSystemPrivate.hpp  AudioSystem.cpp  AudioSystem.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Engine.cpp  Engine.hpp  JackAudioSystem.cpp  JackAudioSystem.hpp  Marquee.cpp  Marquee.hpp  PlayerColors.cpp  PlayerColors.hpp  PlayerSizes.cpp  PlayerSizes.hpp  PlayerWidget.cpp  PlayerWidget.hpp  RingBuffer.hpp  RubberBandServer.cpp  RubberBandServer.hpp  StatusWidget.cpp  StatusWidget.hpp  ThinSlider.cpp  ThinSlider.hpp  bams_format.c  bams_format.h  jack_memops.c  jack_memops.h  main.cpp  stretchplayer.pro  stretchplayer.qrc
